--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
         <br>
         <span>there <span id="isare">are</span> currently <span id="count">__</span> total <span id="users">users</span> connected</span>
         <br>
+        <span class="color" id="record">download your session</span>
     </div>
     <div id="grid">
         <a href="/pink"><div class="block" id="one-one"><span id="pinktext">pink<br><span id="pinkcount">0 users connected</span></span></div></a>
