--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
     <script language="javascript" src="scripts/p5.sound.js"></script>
     <script language="javascript" src="scripts/p5.dom.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script language="javascript" type="text/javascript" src="sketch.js"></script>
     <script language="javascript" type="text/javascript" src="script.js"></script>
+    <script language="javascript" type="text/javascript" src="sketch.js"></script>
 </head>
 <body>
     <div id="text">
@@ -30,7 +30,7 @@
         <br>
         <span>there <span id="isare">are</span> currently <span id="count">__</span> total <span id="users">users</span> connected</span>
         <br>
-        <span class="color" id="record">download your session</span>
+        <span class="color" id="record">record your session</span>
     </div>
     <div id="grid">
         <a href="/pink"><div class="block" id="one-one"><span id="pinktext">pink<br><span id="pinkcount">0 users connected</span></span></div></a>
