--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,10 @@
     <html lang="en">
     <meta charset="utf-8">
     <title>gradation (audio)</title>
-    <meta name="description" content="">
+    <meta name="description" content="a networked + collaborative soundscape by Tristan Rodman">
     <meta name="author" content="Tristan Rodman">
     <meta name=viewport content="width=device-width, initial-scale=1">
+    <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
     <link rel="stylesheet" href="style.css">
     <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
