--- a/public/orange/index.html
+++ b/public/orange/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>gradation (orange)</title>
-    <meta name="description" content="">
+    <meta name="description" content="orange node, gradation, a networked + collaborative soundscape by tristan rodman">
+    <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
     <meta name="author" content="Tristan Rodman">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="scripts/hover.css">
